Volunteer cards' club names no longer overflow

--- a/client/src/components/volunteering/volunteering-card.scss
+++ b/client/src/components/volunteering/volunteering-card.scss
@@ -56,7 +56,8 @@
     color: $bad;
 }
 
-.volunteering-card-name {
+.volunteering-card-name,
+.volunteering-card-club-name {
     margin: 0.1rem;
     font-family: $title-font;
     font-size: 0.9rem;
@@ -69,8 +70,6 @@
 .volunteering-card-club-name {
     color: $text-light;
     font-size: 0.6rem;
-    font-family: $title-font;
-    font-weight: 300;
 }
 
 .volunteering-card-description {
